Import of ANDREFS/Text-Perfide-BookSync-0.01_03 from CPAN.
gitpan-cpan-distribution: Text-Perfide-BookSync
gitpan-cpan-version:      0.01_03
gitpan-cpan-path:         ANDREFS/Text-Perfide-BookSync-0.01_03.tar.gz
gitpan-cpan-author:       ANDREFS
gitpan-cpan-maturity:     developer

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Text-Perfide-BookSync
 
+0.01_03  Wed Apr  4 18:11:28 WEST 2012
+		Manifest updated
 
 0.01_02  Wed Apr  4 17:14:19 WEST 2012
 		Fixed confusion between bytes and chars
